Create & delete file implemented
Created Main class for tests

--- a/storage-local/pom.xml
+++ b/storage-local/pom.xml
@@ -10,6 +10,13 @@
 		<artifactId>storage-specification</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
+  	
+  	<dependency>
+  		<groupId>commons-io</groupId>
+  		<artifactId>commons-io</artifactId>
+  		<version>2.6</version>
+	</dependency>
+	
   </dependencies>
   
   <build>
