--- a/storage-local/pom.xml
+++ b/storage-local/pom.xml
@@ -36,6 +36,14 @@
 					<target>8</target>
 				</configuration>
 			</plugin>
+			<plugin>
+        		<groupId>org.apache.maven.plugins</groupId>
+            	<artifactId>maven-javadoc-plugin</artifactId>
+            	<configuration>
+            		<show>private</show>
+                	<nohelp>true</nohelp>
+            	</configuration>
+        	</plugin>
 		</plugins>
 	</build>
   
